--- a/FormularDeValidare/index.html
+++ b/FormularDeValidare/index.html
@@ -12,9 +12,9 @@
       <form id="form" class="form">
         <h2>Înregistreazăte la noi</h2>
         <div class="form-control">
-          <label for="username">Nume utilizator</label>
+          <label for="Nume-Utilizator">Nume utilizator</label>
           <input
-            id="username"
+            id="Nume-Utilizator"
             type="text"
             placeholder="Introduce-ți numele de utilizator"
           />
@@ -30,18 +30,18 @@
           <small>Mesaj de eroare</small>
         </div>
         <div class="form-control">
-          <label for="password">Parolă</label>
+          <label for="parola">Parolă</label>
           <input
-            id="password"
+            id="parola"
             type="password"
             placeholder="Introduce-ți parola"
           />
           <small>Mesaj de eroare</small>
         </div>
         <div class="form-control">
-          <label for="confirm-password">Confirmare Parolă</label>
+          <label for="confirmare-Parola">Confirmare Parolă</label>
           <input
-            id="confirm-password"
+            id="confirmare-Parola"
             type="password"
             placeholder="Introduce-ți din nou parola"
           />
